lab2/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BREAK
    CONTINUE
    ELSE
    EQ
    FOR
    GREATER
    GREATEREQ
    IF
    LESS
    LESSEQ
    NOTEQ
    PRINT
    RETURN
    STRING
    WHILE

Grammar

Rule 0     S' -> program
Rule 1     program -> instructions_opt
Rule 2     instructions_opt -> instructions
Rule 3     instructions_opt -> <empty>
Rule 4     instructions -> instructions instruction
Rule 5     instructions -> instruction
Rule 6     instruction -> assignment
Rule 7     assignment -> ID = expression ;
Rule 8     assignment -> ID ADDASSIGN expression ;
Rule 9     assignment -> ID SUBASSIGN expression ;
Rule 10    assignment -> ID MULASSIGN expression ;
Rule 11    assignment -> ID DIVASSIGN expression ;
Rule 12    assignment -> ID [ expression , expression ] = expression ;
Rule 13    expression -> expression ADD expression
Rule 14    expression -> expression MINUS expression
Rule 15    expression -> expression MUL expression
Rule 16    expression -> expression DIVIDE expression
Rule 17    expression -> MINUS expression
Rule 18    expression -> expression '
Rule 19    expression -> expression DOTADD expression
Rule 20    expression -> expression DOTSUB expression
Rule 21    expression -> expression DOTMUL expression
Rule 22    expression -> expression DOTDIVIDE expression
Rule 23    expression -> INTNUM
Rule 24    expression -> FLOAT
Rule 25    expression -> matrix_expression
Rule 26    expression -> matrix_create
Rule 27    expression -> ID
Rule 28    matrix_expression -> ZEROS ( expression )
Rule 29    matrix_expression -> ONES ( expression )
Rule 30    matrix_expression -> EYE ( expression )
Rule 31    matrix_create -> [ matrix_rows ]
Rule 32    matrix_rows -> matrix_rows , matrix_rows
Rule 33    matrix_rows -> [ matrix_elems ]
Rule 34    matrix_elems -> matrix_elems , matrix_elems
Rule 35    matrix_elems -> expression

Terminals, with rules where they appear

'                    : 18
(                    : 28 29 30
)                    : 28 29 30
,                    : 12 32 34
;                    : 7 8 9 10 11 12
=                    : 7 12
ADD                  : 13
ADDASSIGN            : 8
BREAK                : 
CONTINUE             : 
DIVASSIGN            : 11
DIVIDE               : 16
DOTADD               : 19
DOTDIVIDE            : 22
DOTMUL               : 21
DOTSUB               : 20
ELSE                 : 
EQ                   : 
EYE                  : 30
FLOAT                : 24
FOR                  : 
GREATER              : 
GREATEREQ            : 
ID                   : 7 8 9 10 11 12 27
IF                   : 
INTNUM               : 23
LESS                 : 
LESSEQ               : 
MINUS                : 14 17
MUL                  : 15
MULASSIGN            : 10
NOTEQ                : 
ONES                 : 29
PRINT                : 
RETURN               : 
STRING               : 
SUBASSIGN            : 9
WHILE                : 
ZEROS                : 28
[                    : 12 31 33
]                    : 12 31 33
error                : 

Nonterminals, with rules where they appear

assignment           : 6
expression           : 7 8 9 10 11 12 12 12 13 13 14 14 15 15 16 16 17 18 19 19 20 20 21 21 22 22 28 29 30 35
instruction          : 4 5
instructions         : 2 4
instructions_opt     : 1
matrix_create        : 26
matrix_elems         : 33 34 34
matrix_expression    : 25
matrix_rows          : 31 32 32
program              : 0

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . instructions_opt
    (2) instructions_opt -> . instructions
    (3) instructions_opt -> .
    (4) instructions -> . instructions instruction
    (5) instructions -> . instruction
    (6) instruction -> . assignment
    (7) assignment -> . ID = expression ;
    (8) assignment -> . ID ADDASSIGN expression ;
    (9) assignment -> . ID SUBASSIGN expression ;
    (10) assignment -> . ID MULASSIGN expression ;
    (11) assignment -> . ID DIVASSIGN expression ;
    (12) assignment -> . ID [ expression , expression ] = expression ;

    $end            reduce using rule 3 (instructions_opt -> .)
    ID              shift and go to state 6

    program                        shift and go to state 1
    instructions_opt               shift and go to state 2
    instructions                   shift and go to state 3
    instruction                    shift and go to state 4
    assignment                     shift and go to state 5

state 1

    (0) S' -> program .



state 2

    (1) program -> instructions_opt .

    $end            reduce using rule 1 (program -> instructions_opt .)


state 3

    (2) instructions_opt -> instructions .
    (4) instructions -> instructions . instruction
    (6) instruction -> . assignment
    (7) assignment -> . ID = expression ;
    (8) assignment -> . ID ADDASSIGN expression ;
    (9) assignment -> . ID SUBASSIGN expression ;
    (10) assignment -> . ID MULASSIGN expression ;
    (11) assignment -> . ID DIVASSIGN expression ;
    (12) assignment -> . ID [ expression , expression ] = expression ;

    $end            reduce using rule 2 (instructions_opt -> instructions .)
    ID              shift and go to state 6

    instruction                    shift and go to state 7
    assignment                     shift and go to state 5

state 4

    (5) instructions -> instruction .

    ID              reduce using rule 5 (instructions -> instruction .)
    $end            reduce using rule 5 (instructions -> instruction .)


state 5

    (6) instruction -> assignment .

    ID              reduce using rule 6 (instruction -> assignment .)
    $end            reduce using rule 6 (instruction -> assignment .)


state 6

    (7) assignment -> ID . = expression ;
    (8) assignment -> ID . ADDASSIGN expression ;
    (9) assignment -> ID . SUBASSIGN expression ;
    (10) assignment -> ID . MULASSIGN expression ;
    (11) assignment -> ID . DIVASSIGN expression ;
    (12) assignment -> ID . [ expression , expression ] = expression ;

    =               shift and go to state 8
    ADDASSIGN       shift and go to state 9
    SUBASSIGN       shift and go to state 10
    MULASSIGN       shift and go to state 11
    DIVASSIGN       shift and go to state 12
    [               shift and go to state 13


state 7

    (4) instructions -> instructions instruction .

    ID              reduce using rule 4 (instructions -> instructions instruction .)
    $end            reduce using rule 4 (instructions -> instructions instruction .)


state 8

    (7) assignment -> ID = . expression ;
    (13) expression -> . expression ADD expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression MUL expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . MINUS expression
    (18) expression -> . expression '
    (19) expression -> . expression DOTADD expression
    (20) expression -> . expression DOTSUB expression
    (21) expression -> . expression DOTMUL expression
    (22) expression -> . expression DOTDIVIDE expression
    (23) expression -> . INTNUM
    (24) expression -> . FLOAT
    (25) expression -> . matrix_expression
    (26) expression -> . matrix_create
    (27) expression -> . ID
    (28) matrix_expression -> . ZEROS ( expression )
    (29) matrix_expression -> . ONES ( expression )
    (30) matrix_expression -> . EYE ( expression )
    (31) matrix_create -> . [ matrix_rows ]

    MINUS           shift and go to state 16
    INTNUM          shift and go to state 17
    FLOAT           shift and go to state 18
    ID              shift and go to state 14
    ZEROS           shift and go to state 21
    ONES            shift and go to state 22
    EYE             shift and go to state 23
    [               shift and go to state 24

    expression                     shift and go to state 15
    matrix_expression              shift and go to state 19
    matrix_create                  shift and go to state 20

state 9

    (8) assignment -> ID ADDASSIGN . expression ;
    (13) expression -> . expression ADD expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression MUL expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . MINUS expression
    (18) expression -> . expression '
    (19) expression -> . expression DOTADD expression
    (20) expression -> . expression DOTSUB expression
    (21) expression -> . expression DOTMUL expression
    (22) expression -> . expression DOTDIVIDE expression
    (23) expression -> . INTNUM
    (24) expression -> . FLOAT
    (25) expression -> . matrix_expression
    (26) expression -> . matrix_create
    (27) expression -> . ID
    (28) matrix_expression -> . ZEROS ( expression )
    (29) matrix_expression -> . ONES ( expression )
    (30) matrix_expression -> . EYE ( expression )
    (31) matrix_create -> . [ matrix_rows ]

    MINUS           shift and go to state 16
    INTNUM          shift and go to state 17
    FLOAT           shift and go to state 18
    ID              shift and go to state 14
    ZEROS           shift and go to state 21
    ONES            shift and go to state 22
    EYE             shift and go to state 23
    [               shift and go to state 24

    expression                     shift and go to state 25
    matrix_expression              shift and go to state 19
    matrix_create                  shift and go to state 20

state 10

    (9) assignment -> ID SUBASSIGN . expression ;
    (13) expression -> . expression ADD expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression MUL expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . MINUS expression
    (18) expression -> . expression '
    (19) expression -> . expression DOTADD expression
    (20) expression -> . expression DOTSUB expression
    (21) expression -> . expression DOTMUL expression
    (22) expression -> . expression DOTDIVIDE expression
    (23) expression -> . INTNUM
    (24) expression -> . FLOAT
    (25) expression -> . matrix_expression
    (26) expression -> . matrix_create
    (27) expression -> . ID
    (28) matrix_expression -> . ZEROS ( expression )
    (29) matrix_expression -> . ONES ( expression )
    (30) matrix_expression -> . EYE ( expression )
    (31) matrix_create -> . [ matrix_rows ]

    MINUS           shift and go to state 16
    INTNUM          shift and go to state 17
    FLOAT           shift and go to state 18
    ID              shift and go to state 14
    ZEROS           shift and go to state 21
    ONES            shift and go to state 22
    EYE             shift and go to state 23
    [               shift and go to state 24

    expression                     shift and go to state 26
    matrix_expression              shift and go to state 19
    matrix_create                  shift and go to state 20

state 11

    (10) assignment -> ID MULASSIGN . expression ;
    (13) expression -> . expression ADD expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression MUL expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . MINUS expression
    (18) expression -> . expression '
    (19) expression -> . expression DOTADD expression
    (20) expression -> . expression DOTSUB expression
    (21) expression -> . expression DOTMUL expression
    (22) expression -> . expression DOTDIVIDE expression
    (23) expression -> . INTNUM
    (24) expression -> . FLOAT
    (25) expression -> . matrix_expression
    (26) expression -> . matrix_create
    (27) expression -> . ID
    (28) matrix_expression -> . ZEROS ( expression )
    (29) matrix_expression -> . ONES ( expression )
    (30) matrix_expression -> . EYE ( expression )
    (31) matrix_create -> . [ matrix_rows ]

    MINUS           shift and go to state 16
    INTNUM          shift and go to state 17
    FLOAT           shift and go to state 18
    ID              shift and go to state 14
    ZEROS           shift and go to state 21
    ONES            shift and go to state 22
    EYE             shift and go to state 23
    [               shift and go to state 24

    expression                     shift and go to state 27
    matrix_expression              shift and go to state 19
    matrix_create                  shift and go to state 20

state 12

    (11) assignment -> ID DIVASSIGN . expression ;
    (13) expression -> . expression ADD expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression MUL expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . MINUS expression
    (18) expression -> . expression '
    (19) expression -> . expression DOTADD expression
    (20) expression -> . expression DOTSUB expression
    (21) expression -> . expression DOTMUL expression
    (22) expression -> . expression DOTDIVIDE expression
    (23) expression -> . INTNUM
    (24) expression -> . FLOAT
    (25) expression -> . matrix_expression
    (26) expression -> . matrix_create
    (27) expression -> . ID
    (28) matrix_expression -> . ZEROS ( expression )
    (29) matrix_expression -> . ONES ( expression )
    (30) matrix_expression -> . EYE ( expression )
    (31) matrix_create -> . [ matrix_rows ]

    MINUS           shift and go to state 16
    INTNUM          shift and go to state 17
    FLOAT           shift and go to state 18
    ID              shift and go to state 14
    ZEROS           shift and go to state 21
    ONES            shift and go to state 22
    EYE             shift and go to state 23
    [               shift and go to state 24

    expression                     shift and go to state 28
    matrix_expression              shift and go to state 19
    matrix_create                  shift and go to state 20

state 13

    (12) assignment -> ID [ . expression , expression ] = expression ;
    (13) expression -> . expression ADD expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression MUL expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . MINUS expression
    (18) expression -> . expression '
    (19) expression -> . expression DOTADD expression
    (20) expression -> . expression DOTSUB expression
    (21) expression -> . expression DOTMUL expression
    (22) expression -> . expression DOTDIVIDE expression
    (23) expression -> . INTNUM
    (24) expression -> . FLOAT
    (25) expression -> . matrix_expression
    (26) expression -> . matrix_create
    (27) expression -> . ID
    (28) matrix_expression -> . ZEROS ( expression )
    (29) matrix_expression -> . ONES ( expression )
    (30) matrix_expression -> . EYE ( expression )
    (31) matrix_create -> . [ matrix_rows ]

    MINUS           shift and go to state 16
    INTNUM          shift and go to state 17
    FLOAT           shift and go to state 18
    ID              shift and go to state 14
    ZEROS           shift and go to state 21
    ONES            shift and go to state 22
    EYE             shift and go to state 23
    [               shift and go to state 24

    expression                     shift and go to state 29
    matrix_expression              shift and go to state 19
    matrix_create                  shift and go to state 20

state 14

    (27) expression -> ID .

    ;               reduce using rule 27 (expression -> ID .)
    ADD             reduce using rule 27 (expression -> ID .)
    MINUS           reduce using rule 27 (expression -> ID .)
    MUL             reduce using rule 27 (expression -> ID .)
    DIVIDE          reduce using rule 27 (expression -> ID .)
    '               reduce using rule 27 (expression -> ID .)
    DOTADD          reduce using rule 27 (expression -> ID .)
    DOTSUB          reduce using rule 27 (expression -> ID .)
    DOTMUL          reduce using rule 27 (expression -> ID .)
    DOTDIVIDE       reduce using rule 27 (expression -> ID .)
    ,               reduce using rule 27 (expression -> ID .)
    )               reduce using rule 27 (expression -> ID .)
    ]               reduce using rule 27 (expression -> ID .)


state 15

    (7) assignment -> ID = expression . ;
    (13) expression -> expression . ADD expression
    (14) expression -> expression . MINUS expression
    (15) expression -> expression . MUL expression
    (16) expression -> expression . DIVIDE expression
    (18) expression -> expression . '
    (19) expression -> expression . DOTADD expression
    (20) expression -> expression . DOTSUB expression
    (21) expression -> expression . DOTMUL expression
    (22) expression -> expression . DOTDIVIDE expression

    ;               shift and go to state 30
    ADD             shift and go to state 31
    MINUS           shift and go to state 32
    MUL             shift and go to state 33
    DIVIDE          shift and go to state 34
    '               shift and go to state 35
    DOTADD          shift and go to state 36
    DOTSUB          shift and go to state 37
    DOTMUL          shift and go to state 38
    DOTDIVIDE       shift and go to state 39


state 16

    (17) expression -> MINUS . expression
    (13) expression -> . expression ADD expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression MUL expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . MINUS expression
    (18) expression -> . expression '
    (19) expression -> . expression DOTADD expression
    (20) expression -> . expression DOTSUB expression
    (21) expression -> . expression DOTMUL expression
    (22) expression -> . expression DOTDIVIDE expression
    (23) expression -> . INTNUM
    (24) expression -> . FLOAT
    (25) expression -> . matrix_expression
    (26) expression -> . matrix_create
    (27) expression -> . ID
    (28) matrix_expression -> . ZEROS ( expression )
    (29) matrix_expression -> . ONES ( expression )
    (30) matrix_expression -> . EYE ( expression )
    (31) matrix_create -> . [ matrix_rows ]

    MINUS           shift and go to state 16
    INTNUM          shift and go to state 17
    FLOAT           shift and go to state 18
    ID              shift and go to state 14
    ZEROS           shift and go to state 21
    ONES            shift and go to state 22
    EYE             shift and go to state 23
    [               shift and go to state 24

    expression                     shift and go to state 40
    matrix_expression              shift and go to state 19
    matrix_create                  shift and go to state 20

state 17

    (23) expression -> INTNUM .

    ;               reduce using rule 23 (expression -> INTNUM .)
    ADD             reduce using rule 23 (expression -> INTNUM .)
    MINUS           reduce using rule 23 (expression -> INTNUM .)
    MUL             reduce using rule 23 (expression -> INTNUM .)
    DIVIDE          reduce using rule 23 (expression -> INTNUM .)
    '               reduce using rule 23 (expression -> INTNUM .)
    DOTADD          reduce using rule 23 (expression -> INTNUM .)
    DOTSUB          reduce using rule 23 (expression -> INTNUM .)
    DOTMUL          reduce using rule 23 (expression -> INTNUM .)
    DOTDIVIDE       reduce using rule 23 (expression -> INTNUM .)
    ,               reduce using rule 23 (expression -> INTNUM .)
    )               reduce using rule 23 (expression -> INTNUM .)
    ]               reduce using rule 23 (expression -> INTNUM .)


state 18

    (24) expression -> FLOAT .

    ;               reduce using rule 24 (expression -> FLOAT .)
    ADD             reduce using rule 24 (expression -> FLOAT .)
    MINUS           reduce using rule 24 (expression -> FLOAT .)
    MUL             reduce using rule 24 (expression -> FLOAT .)
    DIVIDE          reduce using rule 24 (expression -> FLOAT .)
    '               reduce using rule 24 (expression -> FLOAT .)
    DOTADD          reduce using rule 24 (expression -> FLOAT .)
    DOTSUB          reduce using rule 24 (expression -> FLOAT .)
    DOTMUL          reduce using rule 24 (expression -> FLOAT .)
    DOTDIVIDE       reduce using rule 24 (expression -> FLOAT .)
    ,               reduce using rule 24 (expression -> FLOAT .)
    )               reduce using rule 24 (expression -> FLOAT .)
    ]               reduce using rule 24 (expression -> FLOAT .)


state 19

    (25) expression -> matrix_expression .

    ;               reduce using rule 25 (expression -> matrix_expression .)
    ADD             reduce using rule 25 (expression -> matrix_expression .)
    MINUS           reduce using rule 25 (expression -> matrix_expression .)
    MUL             reduce using rule 25 (expression -> matrix_expression .)
    DIVIDE          reduce using rule 25 (expression -> matrix_expression .)
    '               reduce using rule 25 (expression -> matrix_expression .)
    DOTADD          reduce using rule 25 (expression -> matrix_expression .)
    DOTSUB          reduce using rule 25 (expression -> matrix_expression .)
    DOTMUL          reduce using rule 25 (expression -> matrix_expression .)
    DOTDIVIDE       reduce using rule 25 (expression -> matrix_expression .)
    ,               reduce using rule 25 (expression -> matrix_expression .)
    )               reduce using rule 25 (expression -> matrix_expression .)
    ]               reduce using rule 25 (expression -> matrix_expression .)


state 20

    (26) expression -> matrix_create .

    ;               reduce using rule 26 (expression -> matrix_create .)
    ADD             reduce using rule 26 (expression -> matrix_create .)
    MINUS           reduce using rule 26 (expression -> matrix_create .)
    MUL             reduce using rule 26 (expression -> matrix_create .)
    DIVIDE          reduce using rule 26 (expression -> matrix_create .)
    '               reduce using rule 26 (expression -> matrix_create .)
    DOTADD          reduce using rule 26 (expression -> matrix_create .)
    DOTSUB          reduce using rule 26 (expression -> matrix_create .)
    DOTMUL          reduce using rule 26 (expression -> matrix_create .)
    DOTDIVIDE       reduce using rule 26 (expression -> matrix_create .)
    ,               reduce using rule 26 (expression -> matrix_create .)
    )               reduce using rule 26 (expression -> matrix_create .)
    ]               reduce using rule 26 (expression -> matrix_create .)


state 21

    (28) matrix_expression -> ZEROS . ( expression )

    (               shift and go to state 41


state 22

    (29) matrix_expression -> ONES . ( expression )

    (               shift and go to state 42


state 23

    (30) matrix_expression -> EYE . ( expression )

    (               shift and go to state 43


state 24

    (31) matrix_create -> [ . matrix_rows ]
    (32) matrix_rows -> . matrix_rows , matrix_rows
    (33) matrix_rows -> . [ matrix_elems ]

    [               shift and go to state 44

    matrix_rows                    shift and go to state 45

state 25

    (8) assignment -> ID ADDASSIGN expression . ;
    (13) expression -> expression . ADD expression
    (14) expression -> expression . MINUS expression
    (15) expression -> expression . MUL expression
    (16) expression -> expression . DIVIDE expression
    (18) expression -> expression . '
    (19) expression -> expression . DOTADD expression
    (20) expression -> expression . DOTSUB expression
    (21) expression -> expression . DOTMUL expression
    (22) expression -> expression . DOTDIVIDE expression

    ;               shift and go to state 46
    ADD             shift and go to state 31
    MINUS           shift and go to state 32
    MUL             shift and go to state 33
    DIVIDE          shift and go to state 34
    '               shift and go to state 35
    DOTADD          shift and go to state 36
    DOTSUB          shift and go to state 37
    DOTMUL          shift and go to state 38
    DOTDIVIDE       shift and go to state 39


state 26

    (9) assignment -> ID SUBASSIGN expression . ;
    (13) expression -> expression . ADD expression
    (14) expression -> expression . MINUS expression
    (15) expression -> expression . MUL expression
    (16) expression -> expression . DIVIDE expression
    (18) expression -> expression . '
    (19) expression -> expression . DOTADD expression
    (20) expression -> expression . DOTSUB expression
    (21) expression -> expression . DOTMUL expression
    (22) expression -> expression . DOTDIVIDE expression

    ;               shift and go to state 47
    ADD             shift and go to state 31
    MINUS           shift and go to state 32
    MUL             shift and go to state 33
    DIVIDE          shift and go to state 34
    '               shift and go to state 35
    DOTADD          shift and go to state 36
    DOTSUB          shift and go to state 37
    DOTMUL          shift and go to state 38
    DOTDIVIDE       shift and go to state 39


state 27

    (10) assignment -> ID MULASSIGN expression . ;
    (13) expression -> expression . ADD expression
    (14) expression -> expression . MINUS expression
    (15) expression -> expression . MUL expression
    (16) expression -> expression . DIVIDE expression
    (18) expression -> expression . '
    (19) expression -> expression . DOTADD expression
    (20) expression -> expression . DOTSUB expression
    (21) expression -> expression . DOTMUL expression
    (22) expression -> expression . DOTDIVIDE expression

    ;               shift and go to state 48
    ADD             shift and go to state 31
    MINUS           shift and go to state 32
    MUL             shift and go to state 33
    DIVIDE          shift and go to state 34
    '               shift and go to state 35
    DOTADD          shift and go to state 36
    DOTSUB          shift and go to state 37
    DOTMUL          shift and go to state 38
    DOTDIVIDE       shift and go to state 39


state 28

    (11) assignment -> ID DIVASSIGN expression . ;
    (13) expression -> expression . ADD expression
    (14) expression -> expression . MINUS expression
    (15) expression -> expression . MUL expression
    (16) expression -> expression . DIVIDE expression
    (18) expression -> expression . '
    (19) expression -> expression . DOTADD expression
    (20) expression -> expression . DOTSUB expression
    (21) expression -> expression . DOTMUL expression
    (22) expression -> expression . DOTDIVIDE expression

    ;               shift and go to state 49
    ADD             shift and go to state 31
    MINUS           shift and go to state 32
    MUL             shift and go to state 33
    DIVIDE          shift and go to state 34
    '               shift and go to state 35
    DOTADD          shift and go to state 36
    DOTSUB          shift and go to state 37
    DOTMUL          shift and go to state 38
    DOTDIVIDE       shift and go to state 39


state 29

    (12) assignment -> ID [ expression . , expression ] = expression ;
    (13) expression -> expression . ADD expression
    (14) expression -> expression . MINUS expression
    (15) expression -> expression . MUL expression
    (16) expression -> expression . DIVIDE expression
    (18) expression -> expression . '
    (19) expression -> expression . DOTADD expression
    (20) expression -> expression . DOTSUB expression
    (21) expression -> expression . DOTMUL expression
    (22) expression -> expression . DOTDIVIDE expression

    ,               shift and go to state 50
    ADD             shift and go to state 31
    MINUS           shift and go to state 32
    MUL             shift and go to state 33
    DIVIDE          shift and go to state 34
    '               shift and go to state 35
    DOTADD          shift and go to state 36
    DOTSUB          shift and go to state 37
    DOTMUL          shift and go to state 38
    DOTDIVIDE       shift and go to state 39


state 30

    (7) assignment -> ID = expression ; .

    ID              reduce using rule 7 (assignment -> ID = expression ; .)
    $end            reduce using rule 7 (assignment -> ID = expression ; .)


state 31

    (13) expression -> expression ADD . expression
    (13) expression -> . expression ADD expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression MUL expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . MINUS expression
    (18) expression -> . expression '
    (19) expression -> . expression DOTADD expression
    (20) expression -> . expression DOTSUB expression
    (21) expression -> . expression DOTMUL expression
    (22) expression -> . expression DOTDIVIDE expression
    (23) expression -> . INTNUM
    (24) expression -> . FLOAT
    (25) expression -> . matrix_expression
    (26) expression -> . matrix_create
    (27) expression -> . ID
    (28) matrix_expression -> . ZEROS ( expression )
    (29) matrix_expression -> . ONES ( expression )
    (30) matrix_expression -> . EYE ( expression )
    (31) matrix_create -> . [ matrix_rows ]

    MINUS           shift and go to state 16
    INTNUM          shift and go to state 17
    FLOAT           shift and go to state 18
    ID              shift and go to state 14
    ZEROS           shift and go to state 21
    ONES            shift and go to state 22
    EYE             shift and go to state 23
    [               shift and go to state 24

    expression                     shift and go to state 51
    matrix_expression              shift and go to state 19
    matrix_create                  shift and go to state 20

state 32

    (14) expression -> expression MINUS . expression
    (13) expression -> . expression ADD expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression MUL expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . MINUS expression
    (18) expression -> . expression '
    (19) expression -> . expression DOTADD expression
    (20) expression -> . expression DOTSUB expression
    (21) expression -> . expression DOTMUL expression
    (22) expression -> . expression DOTDIVIDE expression
    (23) expression -> . INTNUM
    (24) expression -> . FLOAT
    (25) expression -> . matrix_expression
    (26) expression -> . matrix_create
    (27) expression -> . ID
    (28) matrix_expression -> . ZEROS ( expression )
    (29) matrix_expression -> . ONES ( expression )
    (30) matrix_expression -> . EYE ( expression )
    (31) matrix_create -> . [ matrix_rows ]
